[package]
name = "lambda_tk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
aws_lambda_events = { version = "^0.6", default-features = false, features = ["apigw"] }
aws-sdk-apigatewaymanagement = "^0.12"
lambda_runtime = "^0.5.1"
lambda_tk_macro = { path = "../lambda_tk_macro" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "^0.1.34"

[lib]
name = "lambda_tk"
path = "src/lib.rs"
