[package]
name = "lambda_tk_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version="^1.0.95", features=[ "full", "fold" ] }
quote = "^1.0.18"
proc-macro2 = "^1.0.39"

[lib]
proc-macro = true
